fixed admin login not working on firefox (#168)

--- a/steps-app/src/style/App.scss
+++ b/steps-app/src/style/App.scss
@@ -133,3 +133,7 @@ div.noOutlineDiv:focus {
 .closeButtonNormal:hover {
 	color: red;
 }
+
+.adminPanelEmptyText {
+	padding: 10px;
+}
