--- a/steps-app/src/style/Images.scss
+++ b/steps-app/src/style/Images.scss
@@ -16,43 +16,6 @@ input[type="file"].uploadImageInput {
 	padding-left: 10px;
 }
 
-.infiniteImageListRow {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	padding: 0 10px;
-}
-
-.infiniteImageRowSelected {
-	width: 100%;
-	height: 90%;
-}
-
-.infiniteImageRowUnselected {
-	width: 80%;
-	height: 80%;
-	margin: auto;
-}
-
-.backgroundImage {
-	max-width: 70vw;
-	max-height: 100vh;
-}
-
-.labelledImageContainer {
-	position: relative;
-    text-align: center;
-    color: white;
-}
-
-.selectedImageWrapper {
-	display: flex;
-	margin: auto;
-	align-items: center;
-    justify-content: center;
-	width: unquote("calc(100vw - 250px)"); 
-}
-
 .previewSidewalkImages {
 	width: 35vw;
 	max-width: 200px;
@@ -61,27 +24,6 @@ input[type="file"].uploadImageInput {
 
 .fillAvailable {
 	height: fill-available;
-}
-
-.carousel {
-	max-width: 70vw;
-	// max-height: 70vw;
-	margin: auto;
-}
-
-.adminPreviewContainer {
-	display: flex;
-	flex-direction: row;
-}
-
-.imagePreviewer {
-	display: flex;
-	flex-direction: row;
-	border-style: solid;
-	border-color: lightgray;
-	width: 100vw;
-	max-height: 50vh;
-	margin-top: 2%;
 }
 
 .firstRow {
@@ -110,57 +52,6 @@ input[type="file"].uploadImageInput {
 	color: red;
 }
 
-// arrow CSS reference: https://css-tricks.com/the-shapes-of-css/ 
-.arrowRight {
-	width: 0;
-	height: 0;
-	border-top: 15px solid transparent;
-	border-left: 25px solid black;
-	border-bottom: 15px solid transparent;
-	margin-left: 10px;
-}
-
-.arrowRight:hover {
-	opacity: 0.7;
-}
-
-.previewThumbnail {
-	margin-left: 2px;
-	margin-right: 2px;
-}
-
-.arrowLeft {
-	width: 0;
-	height: 0;
-	border-top: 15px solid transparent;
-	border-right: 25px solid black;
-	border-bottom: 15px solid transparent;
-	margin-right: 10px;
-}
-
-.arrowLeft:hover {
-	opacity: 0.7;
-}
-
-.imagesFadeout {
-	color: #ffffff;
-	visibility: hidden;
-	opacity: 0;
-	transition: visibility 0s 2s, opacity 1s linear;
-}
-
-.disableLeftCarouselArrow {
-	.left {
-		display: None
-	}
-}
-
-.disableRightCarouselArrow {
-	.right {
-		display: None
-	}
-}
-
 .imageCarouselControls {
 	z-index: 1;
 	position: absolute;
@@ -178,4 +69,10 @@ input[type="file"].uploadImageInput {
 .imageApproveAvatar {
 	@extend .imageDeleteAvatar;
 	background-color: $successColour !important;
+}
+
+.image-gallery-slide img {
+	width: auto;
+	display: flex;
+	margin: auto;
 }
